# pitg-mangrove-web

./: .gitignore  README.md  pyproject.toml  requirements.txt
admin/: __init__.py  api.py  auth.py  mangrove.py  schema.sql
admin/templates/: base.html
admin/templates/mangroves/: create.html  index.html  update.html
instance/: pitg.sqlite
tests/: conftest.py  data.sql  test_auth.py  test_db.py  test_factory.py
